solve problem overflow

--- a/style.css
+++ b/style.css
@@ -482,14 +482,6 @@ footer li {
     margin: 5px;
   }
 
-  .mynavbar .nav-link {
-    font-size: 2rem;
-    text-align: center;
-  }
-
-  .sticky-top {
-    overflow: hidden;
-  }
 
   .timeline li .timeline-image {
     width: 140px;
